home/service.yml
apiVersion: v1
kind: Service
metadata:
  name: home-service
  labels:
    app: home
  namespace: personal
spec:
  selector:
    app: home
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 80
