home/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-ingress
  namespace: personal
spec:
  rules:
    - host: home.yorch.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: home-service
                port:
                  number: 80
  tls:
    - hosts:
        - home.yorch.cloud
      secretName: home-certificate
